--- a/critical_infrastructure_dockwidget_base.ui
+++ b/critical_infrastructure_dockwidget_base.ui
@@ -93,23 +93,6 @@
         </property>
        </widget>
       </item>
-      <item row="6" column="1">
-       <widget class="QCheckBox" name="Schools">
-        <property name="text">
-         <string>Schools</string>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="0">
-       <widget class="QCheckBox" name="Universities">
-        <property name="text">
-         <string>Universities</string>
-        </property>
-        <property name="tristate">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
       <item row="0" column="0">
        <widget class="QCheckBox" name="AircraftLandingFacilities">
         <property name="text">
@@ -146,23 +129,33 @@
        </widget>
       </item>
       <item row="4" column="0">
-       <widget class="QCheckBox" name="MajorStateGovernmentBuildings">
+       <widget class="QCheckBox" name="NursingHomes">
         <property name="text">
-         <string>Major state government buildings</string>
+         <string>Nursing homes</string>
         </property>
        </widget>
       </item>
       <item row="4" column="1">
-       <widget class="QCheckBox" name="Pharmacies">
-        <property name="text">
-         <string>Pharmacies</string>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="0">
        <widget class="QCheckBox" name="PoliceStations">
         <property name="text">
          <string>Police stations</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="0">
+       <widget class="QCheckBox" name="Schools">
+        <property name="text">
+         <string>Schools</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="1">
+       <widget class="QCheckBox" name="Universities">
+        <property name="text">
+         <string>Universities</string>
+        </property>
+        <property name="tristate">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
